TN-932 date validation fix

--- a/portal/static/less/psaTracker.less
+++ b/portal/static/less/psaTracker.less
@@ -251,9 +251,14 @@ option.select-option {
 #psaTrackerNoResultContainer {
     margin-top: 1em;
     margin-bottom: 1em;
-    background: #e8e8ea;
+    background: hsla(15, 0%, 68%, 0.7);
     min-height: 10em;
     padding: 4.25em 1em;
+    color: #FFF;
+    font-size: 1.3em;
+    font-style: italic;
+    letter-spacing: 0.5px;
+    -webkit-font-smoothing: antialiased;
 }
 #psaTrackerButtonsContainer {
     padding: 1em 0;
