fix clients application edit page js runtime error

--- a/portal/templates/client_edit.html
+++ b/portal/templates/client_edit.html
@@ -98,20 +98,7 @@
     {% endmacro %}
 
     <br /><br />
-
-
-<script>
-$(document).ready(function(){
-    $('#confirmDel').popover({
-        html : true,
-        content: "Are you sure you want to delete this app?<br /><br /><button type='submit' name='delete' value='delete' class='btn-tnth-primary btn'>Delete Now</button> &nbsp; <div class='btn btn-default' id='cancelDel'>Cancel</div>"
-    })
-    $("body").on('click','#cancelDel',function(){
-        $('#confirmDel').popover('hide')
-    })
-
-});
-</script>
 {% endblock %}
+{% block additional_scripts %}<script src="{{ url_for('static', filename='js/clientIntervention.js') }}"></script>{% endblock %}
 
 
