TN-1239 consent history modal fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2914,6 +2914,11 @@ div.biopsy-option:last-of-type{
     vertical-align: top;
   }
 }
+#consentHistoryTable {
+  tr.history td {
+    background-color: #ececec;
+  }
+}
 
 .button--LR,
 .button--LR.data-show,
