Tn-1239 Consent History Modal followup fix

--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -674,7 +674,7 @@
             </table>
         </div>
         <div id="profileConsentHistory" v-show="showConsentHistory()">
-            <br/><button id="viewConsentHistoryButton" class='btn btn-tnth-primary sm-btn'>{{_("History")}}</button>
+            <br/><button id="viewConsentHistoryButton" class='btn btn-tnth-primary sm-btn tnth-hide'>{{_("History")}}</button>
             <div class="modal fade" id="consentHistoryModal" tabindex="-1" role="dialog" aria-labelledby="consentHistoryModal">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
