fixes based on feedback

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1762,13 +1762,12 @@ body.portal .copyright-container  {
   & .portal-description-title {
     font-size: @baseFontSize;
     font-weight: bold;
-    font-size: @subSmallHeadSize;
   }
 }
 @media (min-width: 992px) {
   .portal-no-description-container {
     & .portal-description-title {
-      font-size: @subSmallHeadSize;
+      font-size: 1em;
     }
   }
 }
