TN-1299 system outage message UI fixes

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -9035,7 +9035,7 @@ a.home--modal-link {
     top: 0;
     right: 0;
     color: #603b00;
-    z-index: 100000;
+    z-index: 80;
     font-weight: 700;
     font-size: .9em;
     text-align: center;
@@ -9121,7 +9121,7 @@ a.home--modal-link {
     left: 0;
     height: 60px;
     background: #a94442;
-    z-index: 100001;
+    z-index: 90;
     text-align: center;
     padding: 0 8px;
     color: #FFF;
@@ -9130,6 +9130,11 @@ a.home--modal-link {
         margin-top: 6px;
         margin-bottom: 6px;
         text-transform: uppercase
+    }
+    .message {
+        margin-top: 6px;
+        margin-bottom: 6px;
+        line-height: 1.3em;
     }
     .title,
     .message {
