--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -110,6 +110,7 @@ body {
 }
 .save-loader-wrapper {
   position: relative;
+  margin-top: 4px;
   min-height: 12px;
   .load-icon {
     margin-left:4px;
@@ -131,7 +132,7 @@ body {
 }
 @media (min-width: 768px) {
   .save-loader-wrapper {
-    min-height: auto;
+    min-height: 8px;
   }
 }
 .form-control,
