fix error display when setting consent failed

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -447,7 +447,7 @@ select:not([multiple]) {
   /* :checked */
   label.tab-label.active ~ .tab-content,
   input.tab-input:checked ~ .tab-content {
-    max-height: 25em;
+    max-height: 27em;
     margin: 1em auto;
     padding: 0.5em;
     border: 1px solid #e4dfdf;
@@ -2949,6 +2949,13 @@ div.biopsy-option:last-of-type{
     background-color: #ececec;
   }
 }
+@media (min-width: 1200px) {
+  #consentHistoryTable {
+    td {
+      min-width: 150px;
+    }
+  }
+}
 
 .button--LR,
 .button--LR.data-show,
@@ -3557,7 +3564,7 @@ div.timezone-warning.text-warning {
 
   #profileConsentHistory {
     .modal-dialog {
-      width: 80%;
+      width: 85%;
       max-width: 100%;
     }
   }
