--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1224,6 +1224,10 @@ div.pull-right {
   }
 }
 #patientList {
+  #patientListOptions {
+    border-bottom: 1px solid #ececec;
+    margin-bottom: 2em;
+  }
   div.or {
     display: block;
     background-color: @orBackgroundColor;
