TN-1324 UI template for org tree

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -206,6 +206,9 @@ body {
     min-height: 8px;
   }
 }
+#fillOrgs.org-tree {
+  flex-direction: row;
+}
 .email-ready-message {
   padding: 8px 5px;
   span.warning {
@@ -1624,7 +1627,6 @@ body.portal {
   overflow-x: hidden;
   overflow-y: auto;
   -ms-overflow-style: none;  // IE 10+
-  overflow: -moz-scrollbars-none;  // Firefox
 }
 body.portal::-webkit-scrollbar { 
   display: none;  // Safari and Chrome
