TN-1259 resources page js runtime error fix

--- a/portal/eproms/templates/eproms/resources.html
+++ b/portal/eproms/templates/eproms/resources.html
@@ -33,5 +33,7 @@
         </div>
     </section>
 </article>
+{% endblock %}
+{% block additional_scripts %}
 <script src="{{url_for('.static', filename='js/resources.js')}}"></script>
 {% endblock %}
