--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -206,6 +206,9 @@ body {
     min-height: 8px;
   }
 }
+#fillOrgs.org-tree {
+  flex-direction: row;
+}
 .email-ready-message {
   padding: 8px 5px;
   span.warning {
@@ -1623,7 +1626,6 @@ body.portal {
   background: #5F676E;
   overflow-x: hidden;
   overflow-y: auto;
-  -ms-overflow-style: none;  // IE 10+
 }
 body.portal .container {
   max-width: 1100px;
