--- a/portal/static/less/psaTracker.less
+++ b/portal/static/less/psaTracker.less
@@ -1,13 +1,21 @@
 
 @psaTrackerBorderColor: #eff0f1;
 @psaTrackerTableHeaderBgColor: #496470;
-@psaTrackerStrokeColor: #777;
-@psaTrackerHoverBgColor: #b0bdc3;
+@psaTrackerStrokeColor: #656F76;
+@psaTrackerHoverBgColor: #D7DBE0;
 @legendTextColor: #333;
 @selectedColor: #777;
 @hoverColor: #FFF;
 @tooltipColor: #374550;
-@markerColor: #8a6d3b;
+@markerColor: #EF425C;
+@contentColor: #656F76;
+@linkBgColor: #5F7782;
+@editLinkColor: #646667;
+@editLinkFontSize: 12px;
+@filterColor: #819EAD;
+@gridLineColor: #d8dade;
+@noResultColor: #B1B1B1;
+@cellBorderColor: #E5E5E5;
 
 .filter-control {
     -webkit-appearance: none;
@@ -15,17 +23,17 @@
     outline: none;
 }
 .tooltip {
-    position: absolute;         
-    text-align: center;         
-    width: 60px;                    
-    height: 28px;                   
-    padding: 2px;               
-    font: 12px sans-serif;      
+    position: absolute;
+    text-align: center;
+    width: 60px;
+    height: 28px;
+    padding: 4px;
+    font: 12px sans-serif;
     background: @tooltipColor;
     color: #FFF;
-    border: 0px;        
-    border-radius: 4px;         
-    pointer-events: none; 
+    border: 0px;
+    border-radius: 0;
+    pointer-events: none;
     &:after {
       border-top: 10px solid @tooltipColor;
       border-left: 10px solid transparent;
@@ -37,7 +45,7 @@
       position: absolute;
       width: 0;
       transform: translateY(-50%);
-    }  
+    }
 }
 .marker {
     stroke: @markerColor;
@@ -74,6 +82,9 @@ option.select-option {
         color: @psaTrackerHoverBgColor;
     }
 }
+.small-text {
+    font-size: 10px;
+}
 .psa-tracker-title {
 	background-color: #374550;
     color: #FFF;
@@ -90,6 +101,10 @@ option.select-option {
 .psa-tracker-table-header {
 	background: @psaTrackerTableHeaderBgColor;
 	color: #FFF;
+    & TH {
+        text-transform: uppercase;
+        letter-spacing: 2px;
+    }
 }
 #psaTrackerResultsContainer {
 	margin-top: 2em;
@@ -112,7 +127,7 @@ option.select-option {
 }
 #psaTrackerDataSidebar {
     .btn {
-        font-size: 12px;
+        font-size: @editLinkFontSize;
         margin: 1em 0;
     }
 }
@@ -123,11 +138,62 @@ option.select-option {
     -webkit-transform: translateX(0);
     -ms-transform: translateX(0);
     transform: translateX(0);
-    border: 2px solid #bf9d9d;
-    padding: 1em 0.5em;
+    background-color: #EBEDEE;
+    border: 1px solid #B1B1B1;
+    padding: 1em;
     margin: 1em auto;
     max-width: 100%;
     font-size: 14px;
+    min-height: 6.5em;
+    .title {
+        color: #3F4B54;
+        font-weight: bold;
+        letter-spacing: 1px;
+    }
+    .content {
+        color: @contentColor;
+        letter-spacing: 1px;
+    }
+    .group {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        div {
+            margin: 0 0.5em;
+        }
+    }
+    .shift-right {
+        text-align: center;
+        color: #FFF;
+        & a {
+            color: @editLinkColor;
+            text-decoration: none;
+            font-weight: 200;
+            letter-spacing: 1px;
+            font-size: 12px;
+            margin-right: 4px;
+            display: inline-block;
+        }
+        .edit-icon {
+            display: inline-block;
+            background: @linkBgColor;
+            padding: 4px;
+            color: #FFF;
+        }
+        a:hover {
+            cursor: pointer;
+            color: @contentColor;
+        }
+        .edit-icon:hover {
+            background-color:@contentColor;
+            cursor: pointer;
+        }
+        width: 70px;
+        padding: 4px;
+        position: absolute;
+        right: 1%;
+        bottom: 8%;
+    }
     &.inactive {
         -webkit-transform: translateX(-150%);
         -ms-transform: translateX(-150%);
@@ -144,29 +210,53 @@ option.select-option {
         overflow-y: hidden;
     }
     #psaTrackerTreatmentContainer {
-        max-width: 93%;
+        max-width: 85%;
+        position: relative;
+        left: 1em;
     }
 }
 #psaTrackerResultsTable,
 #psaTrackerHistoryTable {
     TH, TD {
-        padding: 0.5em 1em;
-        border: 1px solid @psaTrackerStrokeColor;
+        padding: 0.5em 2em;
+        border: 1px solid @cellBorderColor;
+        text-align: center;
     }
     TH {
         letter-spacing: 1px;
         padding: 0.8em;
     }
     TR.result-row {
-        border: 1px solid;
+        border: 1px solid @cellBorderColor;
+        .edit-icon {
+            display: none;
+            position: absolute;
+            top: 35%;
+            left: 6%;
+            color: @selectedColor;
+        }
+        &.edit {
+            .edit-icon {
+                display: block;
+            }
+        }
     }
     TR.result-row.selected,
     TR.result-row:hover {
-        /*border: solid 2px @selectedColor; */
         background: @psaTrackerHoverBgColor;
         color: @hoverColor;
     }
     .result-cell{
+        color: @contentColor;
+        padding: 1em 2em;
+        &:first-of-type {
+            border-right: 0;
+        }
+        &:nth-of-type(2) {
+            border-left: 0;
+        }
+        text-align: center;
+        position: relative;
         input {
             height: 2.2em;
         }
@@ -175,10 +265,42 @@ option.select-option {
             width: 100px;
             &:hover {
                 cursor:pointer;
-                text-decoration: underline;
                 color: @hoverColor;
                 cursor: pointer;
             }
+        }
+    }
+    TFOOT {
+        TD {
+            text-align: left;
+            border-left: 0;
+            border-right: 0;
+            border-bottom: 0;
+            padding: 12px 0;
+        }
+        .edit-icon {
+            width: 22px;
+            text-align: center;
+            background-color: @linkBgColor;
+            color: #FFF;
+            &:hover {
+                cursor:pointer;
+                background-color: @contentColor;
+            }
+        }
+        .glyphicon-remove:before {
+           content: "X";
+           font-family: "sans-serif";
+           position: relative;
+           display: inline-block;
+           padding: 0.1em;
+           font-weight: 500;
+        }
+    }
+    .filter-row {
+        TD {
+            background-color: @filterColor;
+            padding: 0 0.5em;
         }
     }
 }
@@ -251,14 +373,16 @@ option.select-option {
 #psaTrackerNoResultContainer {
     margin-top: 1em;
     margin-bottom: 1em;
-    background: hsla(15, 0%, 68%, 0.7);
+    color: @noResultColor;
+    border: 1px solid @noResultColor;
     min-height: 10em;
     padding: 4.25em 1em;
-    color: #FFF;
     font-size: 1.3em;
     font-style: italic;
     letter-spacing: 0.5px;
+    text-align: center;
     -webkit-font-smoothing: antialiased;
+    position: relative;
 }
 #psaTrackerButtonsContainer {
     padding: 1em 0;
@@ -277,20 +401,22 @@ option.select-option {
     }
     .x-axis path,
     .y-axis path {
-        stroke-width: 0
+        stroke-width: 0;
     }
     .axis-stroke,
     .grid-y text {
         font-size: 12px;
         stroke: @psaTrackerStrokeColor;
-        stroke-width: 0.5;
+        stroke-width: 0.1;
         shape-rendering: crispEdges;
+        -webkit-font-smoothing: antialiased;
     }
     .grid {
         line {
-            stroke: #d2cdcd;
+            stroke: @gridLineColor;
             stroke-opacity: 0.7;
             shape-rendering: crispEdges;
+            stroke-width: 1;
         }
         path {
             stroke-width: 0;
@@ -300,11 +426,13 @@ option.select-option {
         stroke-opacity: 0;
     }
     .legend-text {
-        font-size: 10px;
+        font-size: 12px;
         stroke: @legendTextColor;
-        letter-spacing: 2px;
+        stroke-width: 0.5;
         opacity: 0.6;
-        font-weight: 300;
+        font-weight: 200;
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
     }
     .circle {
         fill: #FFF;
@@ -325,17 +453,124 @@ option.select-option {
     }
 }
 .info-link {
-    text-decoration: underline;
-    font-weight: bold;
+    font-size: @editLinkFontSize;
+    color: @editLinkColor;
+    letter-spacing: 1px;
+    &:hover {
+        cursor:pointer;
+        color: @contentColor;
+        text-decoration: none;
+    }
+    font-weight: 200;
+    text-decoration: none;
+}
+
+.selectdiv {
+  position: relative;
+  /*Don't really need this just for demo styling*/
+
+  /*float: left;*/
+  min-width: 150px;
+  /*margin: 50px 33%;*/
+}
+
+/*To remove button from IE11, thank you Matt */
+select::-ms-expand {
+     display: none;
+}
+
+.selectdiv:after {
+  content: '\25B8';
+  font: 17px "Consolas", monospace;
+  color: #FFF;
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+  right: 4px;
+  /*Adjust for position however you want*/
+
+  top: 8px;
+  padding: 0 2px 2px;
+  /*border-bottom: 1px solid #999;*/
+  /*left line */
+  position: absolute;
+  pointer-events: none;
+}
+.filter-cell {
+    position: relative;
+    &:after {
+      content: '\25B8';
+      font: 17px "Consolas", monospace;
+      color: #FFF;
+      -webkit-transform: rotate(90deg);
+      -moz-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+      transform: rotate(90deg);
+      right: 12px;
+      /*Adjust for position however you want*/
+
+      top: 10px;
+      padding: 0 2px 2px;
+      /*border-bottom: 1px solid #999;*/
+      /*left line */
+      position: absolute;
+      pointer-events: none;
+    }
+    select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+        overflow: -moz-scrollbars-none;
+        overflow: hidden;
+        &:focus {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            -webkit-box-shadow: none;
+            -moz-box-shadow: none;
+            box-shadow: none;
+        }
+        height: 40px;
+        display: block;
+        color: #FFF;
+        background-color: #819EAD;
+        background-image: none;
+        border: 0;
+        option {
+            color: #FFF;
+            &:hover {
+                color: #FFF;
+                background-color: @psaTrackerTableHeaderBgColor;
+                cursor: pointer;
+            }
+        }
+    }
+}
+@supports (-moz-appearance:none) {
+    .filter-cell {
+        select {
+            background-color: transparent !important;
+            background-image: linear-gradient(to bottom, #819EAD, #819EAD);
+            option {
+                background-color: transparent !important;
+            }
+        }
+    }
 }
 @media (min-width: 992px) {
     #psaTrackerGraphContainer {
         margin-top: 1.5em;
     }
     #psaTrackerDataSidebar {
+        padding: 1em 0;
+        border-top: 1px solid @cellBorderColor;
         .btn {
             font-size: 0.85em;
-            margin: 0; 
+            margin: 0;
         }
     }
 }
