--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2375,6 +2375,7 @@ input.clinic {
   margin-left:0.5em;
   width: 250px;
   max-width: 100%;
+  word-wrap: break-word;
 }
 #sendRegistrationEmailForm label {
   font-weight: normal;
