--- a/portal/exercise_diet/templates/exercise_diet/exercise.html
+++ b/portal/exercise_diet/templates/exercise_diet/exercise.html
@@ -1,6 +1,6 @@
 {% extends "exercise_diet/base.html" %}
 {% block main %}
-<main class="main">
+<main class="main exercise-diet">
     {{ super() }}
     <div class="module-assets">
         {% for asset in assets %}
